added the reveal

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(ms_language_codes)
 export(ms_languages)
 export(ms_locale_df)
 export(ms_locales)
+export(ms_region)
 export(ms_synthesize)
+export(reveal)
 export(set_ms_tts_key)
 export(valid_ms_tts_key)
 export(validate_language_gender)
