--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(ms_language_to_ms_name)
 export(ms_languages)
 export(ms_locale_df)
 export(ms_locales)
+export(ms_read_synthesis)
 export(ms_region)
 export(ms_regions)
 export(ms_set_region)
