added listing voices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ms_have_tts_key)
 export(ms_language_codes)
 export(ms_language_to_ms_name)
 export(ms_languages)
+export(ms_list_voices)
 export(ms_locale_df)
 export(ms_locales)
 export(ms_read_synthesis)
@@ -21,6 +22,7 @@ export(ms_synthesize)
 export(ms_synthesize_api_url)
 export(ms_valid_tts_key)
 export(ms_validate_language_gender)
+export(ms_voice_info)
 export(reveal)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
