--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Package
 Package: mscstts
-Version: 0.5.6
+Version: 0.6.0
 Title: R Client for the Microsoft Cognitive Services 'Text-to-Speech' REST API
 Description: R Client for the Microsoft Cognitive Services 
   'Text-to-Speech' REST API, including voice synthesis. A valid account 
@@ -31,3 +31,5 @@ Imports:
     httr,
     jsonlite,
     tuneR
+Depends: 
+    R (>= 2.10)
