--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
-pandoc: 2.10.1
-pkgdown: 1.5.1
+pandoc: 2.17.1.1
+pkgdown: 2.0.3
 pkgdown_sha: ~
-articles: []
-last_built: 2020-10-28T15:09Z
+articles: {}
+last_built: 2022-06-10T00:50Z
 
